# aqw-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  actions.py  requirements.txt  setup.cfg  setup.py
bot/: __init__.py  autoclicker.py  bot.py  components.py
data/: cpu_data.csv  crit_chance_data.csv  data_grapher.py  test_data.csv
debug/: logger.py
debug/logs/: buffer_update.txt  interpreter.txt  parse_buffer.txt  sniffer.txt
handlers/: DataHandler.py  ImageHandler.py
logs/: log.txt
packet_logger/: aqw_info.py  sniffer.py
src/app/: __main__.py  gui.py
src/bot/: __main__.py  autoclicker.py  bot.py  components.py  game.py  gameconfig.py  interpreter.py  player.py
src/data/: cpu_data.csv  data_grapher.py
src/debug/: logger.py  logging.py  monitor.py
src/decorators/: __init__.py  _decorators.py
src/game/: aqw_backend.py  boss.py  character.py  combat.py  (+10 more)
tester/: __main__.py
testers/: locate_on_screen_tester.py  manager_tester.py  screenshot_tester.py  tester.py
tests/: autoclicker_test.py  autoclicker_tests.py  bot_tests.py  combat_tester.py  custom_threading_tester.py  data_test.py  gamesniffer_test.py  gcd_test.py  interpreter_test.py  item_tester.py  monitor.py  multiprocessing_tester.py  player_tester.py  processing_test.py  processor_test.py  sending_test.py  sniffer_tests.py  sniffing_test.py  speed_test.py  test.py  win32auto_tests.py  yami_no_ronin_test.py
util/: monitor.py
v1/: autoclicker.py  interface.py
v1.0/: bot.py  tester.py
v2/: bot.py  interface.py
v2.0/: actions.py  autoclicker.py  bot.py  interface.py  tester.py
(+65 files in other folders)
