[metadata]
name = autoclicker
version = 1.0.0
license = MIT
description = An autoclicker to automate farming in AQW.
long_description = file: README.md
author = awang104-2
classifiers=
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: Windows

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   comtypes>=1.4.9
   numpy>=2.2.1
   opencv-python>=4.11.0.86
   pillow>=11.1.0
   pywin32>=308
   pywinauto>=0.6.9
   six>=1.17.0

[options.packages.find]
where=src